# muzero-rebuilt

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.ai/: checkpoint.json  ledger.json  ledger.schema.json  lock.json.example
configs/: base.yaml  cartpole_efficientzero.yaml  cartpole_muzero.yaml  connect4_muzero.yaml  pendulum_sampled_muzero.yaml  tictactoe_gumbel_muzero.yaml  tictactoe_muzero.yaml
configs/algorithms/: efficientzero.yaml  gumbel_muzero.yaml  muzero.yaml  sampled_muzero.yaml
configs/profiles/: cpu_debug.yaml  laptop_rtx4060_8gb.yaml  ray_local.yaml
docs/: architecture.md  codex-dispatch.md  plan.md  progress.md  research-report.md
docs/references/: ref-batch-mcts.md  ref-efficientzero.md  ref-engineering-stack.md  ref-gumbel-search.md  ref-multiplayer-value-vector.md  ref-muzero-core.md  ref-sampled-continuous-actions.md
scripts/: benchmark_laptop.sh  format.sh  test.sh
src/muzero/benchmark/: runner.py
src/muzero/cli/: benchmark.py  checkpoint.py  (+2 more)
tests/: conftest.py
tests/integration/: test_batch_mcts_smoke.py  test_cartpole_smoke_train.py  test_gumbel_smoke.py  test_pendulum_sampled_smoke.py  test_three_player_toy.py  test_tictactoe_self_play.py
tests/unit/: test_board_games.py  test_checkpoint_metadata.py  test_config_loader.py  test_game_history.py  test_gymnasium_adapter.py  test_inference_batcher.py  test_losses.py  test_mcts.py  test_network_mlp.py  test_package_import.py  test_perspective.py  test_puct.py  test_replay_buffer.py  test_support.py  test_target_builder.py  test_trainer_step.py  test_tree_storage.py
(+54 files in other folders)
