[project]
name = "muzero-rebuilt"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
  "gymnasium>=0.29",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "tensorboard>=2.15",
  "rich>=13.7",
]

[project.optional-dependencies]
ray = ["ray>=2.9"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "pyright>=1.1",
]

[project.scripts]
muzero = "muzero.cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportPrivateImportUsage = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/muzero"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
